fixed layout issue with about me paragraph

--- a/app/components/homePg/aboutMe/aboutMeStyles.css
+++ b/app/components/homePg/aboutMe/aboutMeStyles.css
@@ -4,7 +4,15 @@
   display: flex;
   flex-direction: column;
   align-items: flex-end;
-  margin: 20px;
+  margin: auto;
+}
+
+.middle {
+  padding-top: 120px;
+  display: flex;
+  flex-direction: column;
+  max-width: 1150px;
+  margin: auto;
 }
 
 .scroll {
@@ -15,10 +23,10 @@
   font-size: 60px;
 }
 
-.topContent {
-  margin-top: 50vh;
-  width: 50vw;
+.alignRt {
+  width: 50%;
   max-width: 600px;
+  align-self: flex-end;
 }
 
 .heartBeat {
